--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 PORT=5000
 MONGODB_URI=mongodb://localhost:27017/device-management
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_SECRET=SMV_IT
 NODE_ENV=development 
